--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,5 +85,13 @@ dependencies {
 
     //navigation
     implementation("androidx.navigation:navigation-compose:2.5.2")
-    implementation "com.github.skydoves:landscapist-coil:1.3.1"
+
+    //room dependencies
+
+    implementation "androidx.room:room-runtime:2.4.2"
+    implementation "androidx.room:room-ktx:2.4.2"
+    implementation "androidx.compose.runtime:runtime-livedata:1.1.1"
+    annotationProcessor "androidx.room:room-compiler:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.2"
+
 }
